applications/prd/we-marketplace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: we-marketplace-prd
  labels:
    name: we-marketplace-prd
    environment: production
