applications/prd/we-marketplace/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: we-marketplace
  namespace: we-marketplace-prd
  labels:
    app: we-marketplace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: we-marketplace
  template:
    metadata:
      labels:
        app: we-marketplace
    spec:
      containers:
      - name: we-marketplace
        image: acrwedigitekprd.azurecr.io/we-marketplace:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: keyvault-env
          mountPath: /mnt/secrets-store
          readOnly: true
        resources:
          requests:
            memory: "256Mi"
            cpu: "25m"
          limits:
            memory: "512Mi"
            cpu: "200m"
      volumes:
      - name: keyvault-env
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: we-marketplace-keyvault-env
