applications/prd/we-marketplace/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: we-marketplace
  namespace: we-marketplace-prd
spec:
  selector:
    app: we-marketplace
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
